--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "email": "martin.pravda@gmail.com"
     },
     "dependencies": {
-        "ol": "^10.1.0"
+        "ol": "^10.2.1",
+        "sql.js": "^1.11.0"
     },
     "devDependencies": {
         "bunyan": "^1.8.15",
-        "vite": "5.4.2"
+        "vite": "5.4.8"
     }
 }
