--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "ol": "^10.2.1",
+        "proj4": "^2.12.1",
         "sql.js": "^1.11.0"
     },
     "devDependencies": {
