--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dependencies": {
         "ol": "^10.2.1",
         "proj4": "^2.12.1",
-        "sql.js": "^1.11.0"
+        "spl.js": "^0.1.2"
     },
     "devDependencies": {
         "bunyan": "^1.8.15",
